Fix modal clear content on hidden Fix layout issues Removed some old files and code blocks Set default key options

--- a/core/web/public/rubyca.css
+++ b/core/web/public/rubyca.css
@@ -1,25 +1,17 @@
 @media (min-width: 981px) {
   #infomodal {
-    width: 80%;
-    left: 10%;
-    font-size: 80%;
-    margin-left: auto;
-    margin-right: auto; 
+    font-size: 70%;
   }
 }
 
-@media (max-width: 979px) {
+@media (max-width: 980px) {
   #infomodal {
-    width: 92%;
-    left: 4%;
-    font-size: 45%;
-    margin-left: auto;
-    margin-right: auto; 
+    font-size: 40%;
   }
 }
 
 body .container{
-  padding-bottom: 60px;
+  padding-bottom: 80px;
 }
 
 body .container .container-fluid {
